Fixed: create order button now is a full width on mobile devices

--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -790,7 +790,7 @@ main {
         max-width: 100%;
     }
 
-    .create_review_button {
+    .create_review_button, #create_order_button {
         margin-top: 1rem;
         width: 100%;
     }
